# litehook

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  config.toml.example  docker-compose.yml
.github/workflows/: ci.yml
src/: api.rs  config.rs  db.rs  events.rs  lib.rs  listener.rs  main.rs  model.rs  parser.rs  web.rs
src/sources/: mod.rs  registry.rs
src/sources/telegram/: client.rs  mod.rs  parser.rs  scraper.rs
static/: index.html  script.js  style.css
