[package]
name = "litehook"
version = "0.10.2"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["chrono"] }
html-to-markdown-rs = "2"
serde_json = "1.0.149"
tokio-util = "0.7"
scraper = "0.25.0"
anyhow = "1.0"
tracing = "0.1.44"
config = "0.15.19"
dotenvy = "0.15.7"
envy = "0.4.2"
